# convert_pth_to_engine

./: README.md
voxelmap_p2v/: data_new.csv
voxelmap_p2v/src/: convertOnnxToEngine.sh  inference_whole.cpp
voxelmap_p2v/src/cpp_engine/: CMakeLists.txt
voxelmap_p2v/src/cpp_libtorch/: CMakeLists.txt  main.cpp
voxelmap_p2v/src/python/: Point2VoxelNet.py  convertToCppPt.py  convertToOnnx.py  test(backup).py
